--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,6 +1,5 @@
 name: Build and Push Docker Image
 
-# Run on every push to the 'main' branch
 on:
   push:
     branches: [ "main" ]
@@ -22,12 +21,22 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 3. Build and push the Docker image
+      # 3. Get the short commit hash (THIS IS THE NEW STEP)
+      # This step runs a command to get the first 7 chars of the commit ID
+      # and saves it as an "output" variable named "sha"
+      - name: Get short commit hash
+        id: short-sha
+        run: echo "sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      # 4. Build and push the Docker image (THIS STEP IS MODIFIED)
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
           push: true
-          # This line automatically names the image: your-username/your-repo-name:latest
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+          # This 'tags:' section is now multi-line.
+          # It builds and pushes TWO tags for every commit.
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+            ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:${{ steps.short-sha.outputs.sha }}
